--- a/src/style/dark/var.scss
+++ b/src/style/dark/var.scss
@@ -1,6 +1,7 @@
 // dark mode
 
 $var: (
+    //buttoms
     has-text-primary: hsl(171, 100%, 96%),
     has-text-link: hsl(219, 70%, 96%),
     has-text-info: hsl(206, 70%, 96%),
