--- a/src/style/light/var.scss
+++ b/src/style/light/var.scss
@@ -1,6 +1,7 @@
 // light mode
 
 $var: (
+    //buttoms
     has-text-primary: hsl(171, 100%, 29%),
     has-text-link: hsl(217, 71%, 45%),
     has-text-info: hsl(204, 71%, 39%),
@@ -8,13 +9,24 @@ $var: (
     has-text-warning: hsl(48, 100%, 29%),
     has-text-danger: hsl(348, 86%, 43%),
 
-
     has-background-primary: hsl(171, 100%, 96%),
     has-background-link: hsl(219, 70%, 96%),
     has-background-info: hsl(206, 70%, 96%),
     has-background-success: hsl(142, 52%, 96%),
     has-background-warning: hsl(48, 100%, 96%),
     has-background-danger: hsl(347, 90%, 96%),
+
+    bg-base: #7b7bff,
+    // bg-float: #fff,
+    bg-float: #f4f4f9,
+    
+    // bg-solid:
+    // bg-contrast-li:
+    // bg-contrast-he:
+    // theme-color-li:
+    // theme-color-he:
+    them-h1:rgb(51, 82, 204),
+    them-h2:rgb(61, 68, 97),
 
     has-text-black: hsl(0, 0%, 7%),
     has-text-grey: hsl(0, 0%, 14%),
