--- a/src/style/dark/var.scss
+++ b/src/style/dark/var.scss
@@ -16,6 +16,21 @@ $var: (
     has-background-warning: hsl(48, 100%, 29%),
     has-background-danger: hsl(348, 86%, 43%),
 
+    bg-base: #181818,
+    // bg-float: #fff,
+    bg-float: #373b3c,
+    bg-quote: #202222,
+    border-quote: #494949,
+
+    
+    // bg-solid:
+    // bg-contrast-li:
+    // bg-contrast-he:
+    // theme-color-li:
+    // theme-color-he:
+    them-h1:rgb(39, 147, 255),
+    them-h2:rgb(165, 214, 255),
+
     has-text-black: hsl(0, 0%, 96%),
     has-text-grey: hsl(0, 0%, 86%),
     has-text-dark-grey: hsl(0, 0%, 71%),
