--- a/src/style/light/var.scss
+++ b/src/style/light/var.scss
@@ -19,7 +19,8 @@ $var: (
     bg-base: #7b7bff,
     // bg-float: #fff,
     bg-float: #f4f4f9,
-    
+    bg-quote: #ededed,
+    border-quote: #9a9a9a,
     // bg-solid:
     // bg-contrast-li:
     // bg-contrast-he:
