--- a/src/style/content-modified.scss
+++ b/src/style/content-modified.scss
@@ -13,6 +13,12 @@ h6,
     color: var(--them-h2);
 }
 
+.content blockquote{
+    background-color: var(--bg-quote);
+    border-left: 5px solid var(--border-quote);
+    padding: 1.25em 1.5em;
+}
+
 .content.is-large {
     font-size: 1.5rem;
 }
@@ -20,6 +26,9 @@ h6,
     margin: 0 15% 0 15%;
     margin-top: 0.7em;
     padding: 0.7em;
+}
+.sidebar-adapt{
+    width: 15%;
 }
 
 @media (max-width: 1280px) {
@@ -34,6 +43,9 @@ h6,
     .content-adapt{
         margin: 0 9% 0 9%;
         margin-top: 0.4em;
+    }
+    .sidebar-adapt{
+        width: 9%;
     }
 }
 @media (max-width: 640px) {
