--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,14 +3,15 @@
 // @import "@/../../../node_modules/bulma/sass/utilities/_all.sass";
 @import "bulma/sass/utilities/_all.sass";
 @import "bulma/sass/helpers/_all.sass";
-@import "bulma/sass/elements/button.sass";
+// @import "bulma/sass/elements/button.sass";
 @import "bulma/sass/elements/content.sass";
 // @import "bulma/sass/elements/table.sass";
 
 @import "./table.scss";
 @import "./light/light.scss";
 @import "./dark/dark.scss";
-@import "./heading.scss";
+@import "./content-modified.scss";
+@import "./button.scss";
 @import "./col.scss";
 
 .content{
