--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -21,7 +21,7 @@
     padding-right: 1em;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 1.5em;
     position: relative;
     border-color: transparent;
     border-width: 1px;
