--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -20,7 +20,7 @@
 }
 
 *{
-    transition: all 0.2s ease;
+    // transition: all 0.2s ease;
 }
 :root {
 --vt-font-family-base: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
